--- a/frontent/package.json
+++ b/frontent/package.json
@@ -29,6 +29,8 @@
     "primeicons": "^7.0.0",
     "primeng": "^19.0.10",
     "rxjs": "~7.8.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tailwindcss": "^4.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -39,6 +41,8 @@
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "cypress": "^14.5.1",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
