--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -7,3 +7,6 @@ server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=30s
 
 notification.topic-name=notification-events
+
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.ByteArrayDeserializer
