--- a/infrasturcture/docker-compose.yml
+++ b/infrasturcture/docker-compose.yml
@@ -117,6 +117,16 @@ services:
       - GF_LOG_MODE=console file
       - GF_LOG_FILTERS=alerting.notifier.slack:debug alertmanager:debug ngalert:debug
 
+  activemq-artemis:
+    image: apache/activemq-artemis:2.44.0
+    container_name: 'activemq-artemis'
+    ports:
+      - "61616:61616"
+      - "8161:8161"
+    volumes:
+      - ./activemq_data:/data/activemq
+      - ./activemq_log:/var/log/activemq
+
 volumes:
   esdata01:
     external: true
