--- a/camel-integration/pom.xml
+++ b/camel-integration/pom.xml
@@ -41,6 +41,11 @@
 			<version>${camel.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-activemq-starter</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-spring-rabbitmq</artifactId>
 			<version>${camel.version}</version>
