--- a/camel-integration/src/main/resources/application.properties
+++ b/camel-integration/src/main/resources/application.properties
@@ -7,4 +7,16 @@ spring.application.name=camel-integration
 spring.lifecycle.timeout-per-shutdown-phase=30s
 spring.main.allow-bean-definition-overriding=true
 
+# ActiveMQ Artemis configuration
+spring.artemis.broker-url=tcp://localhost:61616
+spring.artemis.user=admin
+spring.artemis.password=admin
+
+# RabbitMQ configuration
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+
 
