--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=auth-service
 server.shutdown=graceful
 server.port=4005
 spring.messages.encoding=UTF-8
+#spring.main.allow-circular-references=true
 
 server.compression.enabled=true
 server.compression.mime-type=text/html,text/xml,text/plain,application/json,application/xml,text/css,text/javascript,application/javascript
