--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -137,6 +137,11 @@
             <artifactId>protobuf-java</artifactId>
             <version>${protobuf.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.gavlyukovskiy</groupId>
+            <artifactId>datasource-proxy-spring-boot-starter</artifactId>
+            <version>1.12.0</version>
+        </dependency>
         <!-- Utility Dependencies End-->
 		<!-- QueryDSL Dependencies Start-->
 		<dependency>
