--- a/frontent/package.json
+++ b/frontent/package.json
@@ -30,7 +30,8 @@
     "primeng": "^19.0.10",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
-    "stompjs": "^2.3.3",
+    "@stomp/stompjs": "^7.2.1",
+    "@types/sockjs-client": "^1.5.4",
     "tailwindcss": "^4.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -42,7 +43,6 @@
     "@types/jasmine": "~5.1.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/sockjs-client": "^1.5.4",
-    "@types/stompjs": "^2.3.9",
     "cypress": "^14.5.1",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
