--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -17,3 +17,32 @@ spring.artemis.user=artemis
 spring.artemis.password=artemis
 artemis.stomp.relay.host=127.0.0.1
 artemis.stomp.relay.port=61613
+
+# datasource
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.poolname=Hikari
+spring.datasource.hikari.auto-commit=false
+spring.datasource.hikari.idleTimeout=10000
+spring.datasource.hikari.maxLifetime=30000
+spring.datasource.hikari.minimumIdle=10
+spring.datasource.hikari.maximumPoolSize=10
+spring.datasource.url=jdbc:postgresql://192.168.1.6:5432/notificationservice
+spring.datasource.password=notificationservice
+spring.datasource.username=notificationservice
+
+spring.data.jpa.repositories.bootstrap-mode=deferred
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.properties.hibernate.query.in_clause_parameter_padding=true
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=100
+
+# liquibase
+spring.liquibase.change-log=classpath:db/changelog/master.xml
+spring.liquibase.default-schema=public
+spring.liquibase.enabled=true
