--- a/analytics-service/src/main/resources/application.properties
+++ b/analytics-service/src/main/resources/application.properties
@@ -10,3 +10,11 @@ spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.B
 spring.kafka.bootstrap-servers=localhost:9092
 
 patient.processing.topic-name=patient-events
+
+spring.datasource.url=jdbc:ch://localhost:8123/analyticsservice
+spring.datasource.username=default
+spring.datasource.password=clickhouse
+spring.datasource.driver-class-name=com.clickhouse.jdbc.ClickHouseDriver
+
+spring.liquibase.change-log=classpath:db/changelog/master.xml
+spring.liquibase.enabled=true
