--- a/infrasturcture/docker-compose.yml
+++ b/infrasturcture/docker-compose.yml
@@ -132,9 +132,36 @@ services:
       - ./activemq_log:/var/log/activemq
       - ./data/artemis/broker.xml:/var/lib/artemis/etc/broker.xml # Mount custom broker.xml
 
+  clickhouse-server:
+    image: clickhouse/clickhouse-server:24.3-alpine
+    container_name: clickhouse-server
+    hostname: clickhouse-server
+    restart: always
+    ports:
+      - "8123:8123"
+      - "9001:9000"
+    volumes:
+      - clickhouse_data:/var/lib/clickhouse
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "localhost:8123/ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+    ulimits:
+      nofile:
+        soft: 262144
+        hard: 262144
+    environment:
+      CLICKHOUSE_USER: default
+      CLICKHOUSE_PASSWORD: "clickhouse"
+      CLICKHOUSE_DB: analyticsservice
+
+
 volumes:
   esdata01:
     external: true
+  clickhouse_data:
+    driver: local
 
 networks:
   elastic:
